# routine-lab

./: pyproject.toml
routine_lab/: main.py
