[tool.poetry]
name = "routine-lab"
version = "0.1.0"
description = ""
authors = ["André Araújo <andre.araujosilva2006@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyautogui = "^0.9.54"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
